php/include/pdf_oxide.h

typedef struct FfiAnnotationList FfiAnnotationList;
typedef struct FfiFontList FfiFontList;
typedef struct FfiImageList FfiImageList;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct Pdf Pdf;
typedef struct PdfDocument PdfDocument;
Pdf *pdf_from_markdown(const char *markdown, int32_t *error_code);
Pdf *pdf_from_html(const char *html, int32_t *error_code);
Pdf *pdf_from_text(const char *text, int32_t *error_code);
int32_t pdf_save(Pdf *handle, const char *path, int32_t *error_code);
uint8_t *pdf_save_to_bytes(Pdf *handle, int32_t *data_len, int32_t *error_code);
int32_t pdf_get_page_count(Pdf *handle, int32_t *error_code);
void pdf_free(Pdf *handle);
char *pdf_oxide_font_get_type(const FfiFontList *fonts, int32_t index, int32_t *error_code);
char *pdf_oxide_font_get_encoding(const FfiFontList *fonts, int32_t index, int32_t *error_code);
int32_t pdf_oxide_font_is_subset(const FfiFontList *fonts, int32_t index, int32_t *error_code);
char *pdf_oxide_image_get_format(const FfiImageList *images, int32_t index, int32_t *error_code);
char *pdf_oxide_image_get_colorspace(const FfiImageList *images,
                                     int32_t index,
                                     int32_t *error_code);
uint8_t *pdf_oxide_image_get_data(const FfiImageList *images,
                                  int32_t index,
                                  int32_t *data_len,
                                  int32_t *error_code);
void pdf_oxide_annotation_get_rect(const FfiAnnotationList *annotations,
                                   int32_t index,
                                   float *x,
                                   float *y,
                                   float *width,
                                   float *height,
                                   int32_t *error_code);
int64_t pdf_oxide_annotation_get_creation_date(const FfiAnnotationList *annotations,
                                               int32_t index,
                                               int32_t *error_code);
char *pdf_oxide_annotation_get_author(const FfiAnnotationList *annotations,
                                      int32_t index,
                                      int32_t *error_code);
float pdf_page_get_width(PdfDocument *handle, int32_t page_index, int32_t *error_code);
float pdf_page_get_height(PdfDocument *handle, int32_t page_index, int32_t *error_code);
int32_t pdf_estimate_render_time(const void *_doc, int32_t _page_index, int32_t *error_code);
FfiRenderedImage *pdf_render_page(PdfDocument *doc,
                                  int32_t page_index,
                                  int32_t format,
                                  int32_t *error_code);
FfiRenderedImage *pdf_render_page_region(PdfDocument *doc,
                                         int32_t page_index,
                                         float crop_x,
                                         float crop_y,
                                         float crop_width,
                                         float crop_height,
                                         int32_t format,
                                         int32_t *error_code);
FfiRenderedImage *pdf_render_page_zoom(PdfDocument *doc,
                                       int32_t page_index,
                                       float zoom,
                                       int32_t format,
                                       int32_t *error_code);
FfiRenderedImage *pdf_render_page_fit(PdfDocument *doc,
                                      int32_t page_index,
                                      int32_t w,
                                      int32_t h,
                                      int32_t format,
                                      int32_t *error_code);
FfiRenderedImage *pdf_render_page_thumbnail(PdfDocument *doc,
                                            int32_t page_index,
                                            int32_t _size,
                                            int32_t format,
                                            int32_t *error_code);
bool pdf_ocr_page_needs_ocr(PdfDocument *doc, int32_t page_index, int32_t *error_code);
char *pdf_ocr_extract_text(PdfDocument *doc,
                           int32_t page_index,
                           const void *engine,
                           int32_t *error_code);