ruby/lib/pdf_oxide/ffi/bindings.rb


      # ANNOTATION (21)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_author (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_color (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_contents (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_flags (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_opacity (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_subject (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_get_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_freetext_annotation_get_font_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_freetext_annotation_get_font_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_link_annotation_get_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_link_annotation_get_uri (1 line)
      attach_function :pdf_oxide_annotation_get_author, [:pointer, :int32, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_oxide_annotation_get_contents (1 line)
      attach_function :pdf_oxide_annotation_get_creation_date, [:pointer, :int32, :pointer], :int64
      attach_function :pdf_oxide_annotation_get_rect, [:pointer, :pointer, :pointer, :pointer, :int32, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_page_get_annotations_by_type_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_get_annotations_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_text_annotation_get_icon (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_text_annotation_get_open (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_text_markup_annotation_get_type (1 line)

      # DOCUMENT (10)
      # REMOVED phantom (no upstream symbol): :pdf_document_can_annotate (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_can_copy (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_can_fill_forms (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_can_modify (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_can_print (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_encryption_algorithm (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_mod_date (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_outline_level (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_outline_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_is_layer_visible (1 line)

      # PAGE (8)
      attach_function :pdf_get_page_count, [:pointer, :pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_page_find_elements_count (1 line)
      attach_function :pdf_page_get_height, [:pointer], :float
      # REMOVED phantom (no upstream symbol): :pdf_page_get_index (1 line)
      attach_function :pdf_page_get_width, [:pointer], :float
      # REMOVED phantom (no upstream symbol): :pdf_page_search_text (1 line)
      attach_function :pdf_render_page, [:pointer, :int32, :pointer, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_search_result_get_page (1 line)

      # ELEMENT (9)
      # REMOVED phantom (no upstream symbol): :pdf_element_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_element_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_element_get_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_element_get_data (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_element_get_data_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_element_get_dimensions (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_element_get_format (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_text_element_get_content (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_text_element_get_font_size (1 line)

      # SEARCH (3)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_search_result_get_position (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_search_result_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_search_result_get_text (1 line)

      # RENDERING (2)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_copy_data (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_format (1 line)

      # OCR (2)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_get_span (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_to_text_span (1 line)

      # IMAGE (3)
      attach_function :pdf_oxide_image_get_colorspace, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_oxide_image_get_data, [:pointer, :int32, :pointer, :pointer], :pointer
      attach_function :pdf_oxide_image_get_format, [:pointer, :int32, :pointer], :pointer

      # TEXT (1)
      attach_function :pdf_from_text, [:string, :pointer], :pointer

      # OTHER (8)
      # REMOVED phantom (no upstream symbol): :pdf_cache_get_statistics_json (1 line)
      attach_function :pdf_from_html, [:string, :pointer], :pointer
      attach_function :pdf_from_markdown, [:string, :pointer], :pointer
      attach_function :pdf_oxide_font_get_encoding, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_oxide_font_get_type, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_oxide_font_is_subset, [:pointer, :int32, :pointer], :int32
      attach_function :pdf_save, [:pointer, :string, :pointer], :int32
      attach_function :pdf_save_to_bytes, [:pointer, :pointer, :pointer, :pointer], :int32

      # FREE/CLEANUP FUNCTIONS (6)
      # REMOVED phantom (no upstream symbol): :pdf_annotation_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_search_result_free (1 line)
      attach_function :pdf_free, [:pointer], :void
      # REMOVED phantom (no upstream symbol): :pdf_oxide_annotation_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_get_dimensions (1 line)

      # ============================================================
      # PHASE 1: ADDITIONAL FFI BINDINGS (122 MISSING FUNCTIONS)
      # ============================================================

      # ============================================================
      # OCR OPERATIONS (16 missing functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_get_char_confidence (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_batch_results_get_page (1 line)
      # REMOVED duplicate declaration: :pdf_ocr_page_needs_ocr (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_detect_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_recognize_page (1 line)
      # REMOVED duplicate declaration: :pdf_ocr_extract_text (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_extract_spans (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_extract_pages (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_engine_get_version (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_engine_get_status (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_get_text (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_average_confidence (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_create (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_set_detection_threshold (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_set_recognition_threshold (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_set_max_side_len (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_set_use_gpu (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_set_gpu_device_id (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_config_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_engine_create_with_config (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_to_text_span (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_ocr_result_confidence (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_gpu_available (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_gpu_device_count (1 line)

      # ============================================================
      # RENDERING OPERATIONS (20 missing functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_create (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_set_options (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_free (1 line)
      # REMOVED duplicate declaration: :pdf_render_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_page_to_file (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_page_range (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_document (1 line)
      # REMOVED duplicate declaration: :pdf_render_page_region (1 line)
      # REMOVED duplicate declaration: :pdf_render_page_zoom (1 line)
      # REMOVED duplicate declaration: :pdf_render_page_fit (1 line)
      # REMOVED duplicate declaration: :pdf_render_page_thumbnail (1 line)
      attach_function :pdf_estimate_render_time, [:pointer, :int32, :pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_renderer_get_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_reset_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_width (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_height (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_data (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_convert (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_to_base64 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_page_to_base64 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_format_mime_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_image_format_extension (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_statistics_pages_rendered (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_statistics_total_time (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_statistics_avg_time (1 line)
